--- a/events.html
+++ b/events.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Javascript task 1</title>
+    <title>Javascript task 1 - Events</title>
 </head>
 <body>
     <header>
-            <div class="loguito" id="Home">
+            <div class="loguito">
                 <img src="./assets/img/Logo Amazing Events.png" alt="Logo">
             </div>
             <div class="botonera" style="display: flex;">
@@ -24,7 +24,7 @@
     <nav>
         <div class="scroll">
             <i class="fa-solid fa-arrow-left"></i>
-            <h1>Home</h1>
+            <h1>Events</h1>
             <i class="fa-solid fa-arrow-right"></i>
         </div>
     </nav>
