--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
     </header>
     <nav>
         <div class="scroll">
-            <i class="fa-solid fa-arrow-left"></i>
+            <a href="./pastEvents.html"><i class="fa-solid fa-arrow-left"></i></a>
             <h1>Contact</h1>
-            <i class="fa-solid fa-arrow-right"></i>
+            <a href="./stats.html"><i class="fa-solid fa-arrow-right"></i></a>
         </div>
     </nav>
     <article>
