--- a/stats.html
+++ b/stats.html
@@ -23,9 +23,9 @@
     </header>
     <nav>
         <div class="scroll">
-            <i class="fa-solid fa-arrow-left"></i>
+            <a href="./contact.html"><i class="fa-solid fa-arrow-left"></i></a>
             <h1>Stats</h1>
-            <i class="fa-solid fa-arrow-right"></i>
+            <a href="./index.html"><i class="fa-solid fa-arrow-right"></i></a>
         </div>
     </nav>
     <section>
