--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </header>
     <nav>
         <div class="scroll">
-            <i class="fa-solid fa-arrow-left"></i>
+            <a href="./stats.html"><i class="fa-solid fa-arrow-left"></i></a>
             <h1>Home</h1>
-            <i class="fa-solid fa-arrow-right"></i>
+            <a href="./events.html"><i class="fa-solid fa-arrow-right"></i></a>
         </div>
     </nav>
     <section>
