--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         </div>
     </section>
     <section>
-        <div class="container">
-            <div class="card">
+        <!-- <div id="contenedor"></div> -->
+        <div class="container" id="showCards">
+            <!-- <div class="card" id="card1">
                 <figure>
                     <img src="./assets/img/Marathon.jpg" alt="">
                 </figure>
@@ -90,7 +91,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     <p>Price: $10000 <a href="">Load More</a></p> 
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <footer>
@@ -104,5 +105,8 @@
         <h1>Cohort</h1>
     </footer>
     <script src="https://kit.fontawesome.com/ff041e35ca.js" crossorigin="anonymous"></script>
+    <script src="/JsArchivos/data.js"></script>
+    <script src="/JsArchivos/home.js"></script>
+    <script src="/JsArchivos/ejercicios.js"></script>
 </body>
 </html>
