--- a/details.html
+++ b/details.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./assets/img/Logo-Amazing-Events.ico" type="image/x-icon">
-    <title>Javascript task 1</title>
+    <title>Javascript task 1 - Events</title>
 </head>
 <body>
     <header>
-            <div class="loguito" id="Home">
+            <div class="loguito">
                 <img src="./assets/img/Logo Amazing Events.png" alt="Logo">
             </div>
             <div class="botonera" style="display: flex;">
@@ -22,28 +22,21 @@
             </div>
         </div>
     </header>
-    <nav>
-        <div class="scroll">
-            <a href="./pastEvents.html"><i class="fa-solid fa-arrow-left"></i></a>
-            <h1>Contact</h1>
-            <a href="./stats.html"><i class="fa-solid fa-arrow-right"></i></a>
-        </div>
-    </nav>
-    <article>
-        <form action="">
-            <div class="contacto-two">
-                <label for="name">Name:</label><br>
-                <input type="text" class="field"><br>
-                <label for="email">Email:</label><br>
-                <input type="email" class="field"><br>
-                <label for="Message">Message:</label><br>
-                <textarea style="font-size: 38px;"></textarea><br>
-                <div class="submit" style="text-align: end;">
-                    <input type="button" value="submit">
+    <section style="width: 100%;">
+        <div class="container-two">
+            <div class="card-two">
+                <figure>
+                    <img src="./assets/img/Costume_Party.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Maraton</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur provident repellendus quidem, maiores commodi aliquid praesentium eveniet atque earum aut non suscipit, odio ab temporibus aspernatur nesciunt, harum optio eligendi.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt iste ipsam dolore aperiam voluptas illum provident quaerat voluptates labore odio minus tempora</p>
                 </div>
             </div>
-        </form>
-    </article>
+        </div>
+    </section>
     <footer>
         <div class="footer-s">
             <div class="iconos">
