--- a/pastEvents.html
+++ b/pastEvents.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="./assets/img/Logo-Amazing-Events.ico" type="image/x-icon">
     <title>Javascript task 1 - Events</title>
 </head>
 <body>
@@ -21,17 +22,74 @@
             </div>
         </div>
     </header>
-    <section style="width: 100%;">
-        <div class="container-two">
-            <div class="card-two">
+    <nav>
+        <div class="scroll">
+            <a href="./events.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <h1>Past Events</h1>
+            <a href="./contact.html"><i class="fa-solid fa-arrow-right"></i></a>
+        </div>
+    </nav>
+    <section>
+        <div class="section-flex">
+            <form action="">
+                <input type="checkbox" name="Category" id="Category">
+                <label for="Category">Category</label>
+                <input type="checkbox" name="Category" id="Category">
+                <label for="Category">Category</label>
+                <input type="checkbox" name="Category" id="Category">
+                <label for="Category">Category</label>
+                <input type="checkbox" name="Category" id="Category">
+                <label for="Category">Category</label>
+                <input type="checkbox" name="Category" id="Category">
+                <label for="Category">Category</label>
+                <input type="checkbox" name="Category" id="Category">
+            </form>
+        </div>
+        <div class="section-flex-two">
+            <input type="search" name="" id="">
+            <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="card">
                 <figure>
-                    <img src="./assets/img/Costume_Party.jpg" alt="">
+                    <img src="./assets/img/Marathon.jpg" alt="">
                 </figure>
                 <div class="contenido">
                     <h3>Maraton</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur provident repellendus quidem, maiores commodi aliquid praesentium eveniet atque earum aut non suscipit, odio ab temporibus aspernatur nesciunt, harum optio eligendi.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt iste ipsam dolore aperiam voluptas illum provident quaerat voluptates labore odio minus tempora</p>
+                    <p>Price: $10000 <a href="">Load More</a></p> 
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="./assets/img/Museum_Tour.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Museum</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Price: $10000 <a href="">Load More</a></p> 
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="./assets/img/Music_Concert.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Music Concert</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Price: $10000 <a href="">Load More</a></p> 
+                </div>
+            </div>
+            <div class="card">
+                <figure>
+                    <img src="./assets/img/Food_Fair.jpg" alt="">
+                </figure>
+                <div class="contenido">
+                    <h3>Food</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    <p>Price: $10000 <a href="">Load More</a></p> 
                 </div>
             </div>
         </div>
