tratando de arreglar la api

--- a/events.html
+++ b/events.html
@@ -51,47 +51,7 @@
         </div>
     </section>
     <section>
-        <div class="container">
-            <div class="card">
-                <figure>
-                    <img src="./assets/img/Marathon.jpg" alt="">
-                </figure>
-                <div class="contenido">
-                    <h3>Maraton</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <p>Price: $10000 <a href="">Load More</a></p> 
-                </div>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="./assets/img/Museum_Tour.jpg" alt="">
-                </figure>
-                <div class="contenido">
-                    <h3>Museum</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <p>Price: $10000 <a href="">Load More</a></p> 
-                </div>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="./assets/img/Music_Concert.jpg" alt="">
-                </figure>
-                <div class="contenido">
-                    <h3>Music Concert</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <p>Price: $10000 <a href="">Load More</a></p> 
-                </div>
-            </div>
-            <div class="card">
-                <figure>
-                    <img src="./assets/img/Food_Fair.jpg" alt="">
-                </figure>
-                <div class="contenido">
-                    <h3>Food</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <p>Price: $10000 <a href="">Load More</a></p> 
-                </div>
-            </div>
+        <div class="container" id="showCards">
         </div>
     </section>
     <footer>
@@ -104,6 +64,8 @@
         </div>
         <h1>Cohort</h1>
     </footer>
+    <script src="/JsArchivos/amazingEvents.js"></script>
+    <script src="/JsArchivos/data.js"></script>
     <script src="https://kit.fontawesome.com/ff041e35ca.js" crossorigin="anonymous"></script>
 </body>
 </html>
